# pdrs

./: .env  .gitignore  Cargo.toml  build.rs
migrations/: 000-2024-12-12.sql
src/: main.rs  panic.rs
src/api/: index.html  mod.rs
src/api/xrpc/: error.rs  handler.rs  mod.rs
src/api/xrpc/atproto/: admin_deleteAccount.rs  admin_disableAccountInvites.rs  admin_disableInviteCodes.rs  admin_enableAccountInvites.rs  admin_getAccountInfo.rs  admin_getInviteCodes.rs  admin_searchAccounts.rs  admin_updateSubjectStatus.rs  mod.rs
src/api/xrpc/com_atproto/: admin_deleteAccount.rs  admin_disableAccountInvites.rs  admin_disableInviteCodes.rs  admin_enableAccountInvites.rs  admin_getAccountInfo.rs  admin_getAccountInfos.rs  admin_getInviteCodes.rs  admin_getSubjectStatus.rs  admin_sendEmail.rs  admin_updateAccountEmail.rs  admin_updateAccountHandle.rs  admin_updateAccountPassword.rs  admin_updateSubjectStatus.rs  identity_getRecommendedDidCredentials.rs  identity_requestPlcOperationSignature.rs  identity_resolveHandle.rs  identity_signPlcOperation.rs  identity_submitPlcOperation.rs  identity_updateHandle.rs  label_queryLabels.rs  mod.rs  moderation_createReport.rs  repo_applyWrites.rs  repo_createRecord.rs  repo_deleteRecord.rs  repo_describeRepo.rs  repo_getRecord.rs  repo_importRepo.rs  repo_listMissingBlobs.rs  repo_listRecords.rs  repo_putRecord.rs  repo_uploadBlob.rs  server_activateAccount.rs  server_checkAccountStatus.rs  server_confirmEmail.rs  server_createAccount.rs  server_createAppPassword.rs  server_createInviteCode.rs  server_createInviteCodes.rs  server_createSession.rs  (+27 more)
src/api/xrpc/model/: at_identifier.rs  at_uri.rs  did.rs  (+2 more)
src/global/: database.rs  mod.rs  password.rs
